; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_set_blend_state.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_set_blend_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_cs = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.wined3d_cs_set_blend_state = type { i32 }

@STATE_BLEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_cs*, i8*)* @wined3d_cs_exec_set_blend_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wined3d_cs_exec_set_blend_state(%struct.wined3d_cs* %0, i8* %1) #0 {
  %3 = alloca %struct.wined3d_cs*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wined3d_cs_set_blend_state*, align 8
  store %struct.wined3d_cs* %0, %struct.wined3d_cs** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.wined3d_cs_set_blend_state*
  store %struct.wined3d_cs_set_blend_state* %7, %struct.wined3d_cs_set_blend_state** %5, align 8
  %8 = load %struct.wined3d_cs_set_blend_state*, %struct.wined3d_cs_set_blend_state** %5, align 8
  %9 = getelementptr inbounds %struct.wined3d_cs_set_blend_state, %struct.wined3d_cs_set_blend_state* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %12 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  %14 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %15 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @STATE_BLEND, align 4
  %18 = call i32 @device_invalidate_state(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @device_invalidate_state(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
